data pre-processing up to the dataset subset to manually label

--- a/fine-tuning-model/3-fine-tuning.ipynb
+++ b/fine-tuning-model/3-fine-tuning.ipynb
@@ -22,56 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Choosing a model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "After a bit of research, the multilingual BERT -> [mBERT](https://huggingface.co/google-bert/bert-base-multilingual-cased) ([GitHub](https://github.com/google-research/bert/blob/master/multilingual.md)) seems like a logical first approach to the project.\n",
-    "\n",
-    "We will use mBERT and fine-tune it, training it with our own dataset and labels (sentiments)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Fine-tuning strategy"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Since our dataset is fairly large, manually labeling each text can be an arduous task. That is why we will follow a semi-supervised learning approach:\n",
-    "\n",
-    "1. We have manually labeled a small subset of the data.\n",
-    "2. We'll use mBERT to predict the labels for the unlabeled data.\n",
-    "3. We will retain the most confident predictions (those with high probability scores), and then treat them as additional labeled data.\n",
-    "4. Finally, we'll retrain the model based on both the original labeled data and the new pseudo-labeled data."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "What we want to do sentiment analysis on is the **comments** in each article. This will give us insight into how the citizens feel about different topics treated in the press."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Data pre-processing"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The data was obtained using a web crawler (`main_crawler.py`). This program takes as input a list of terms and uses them to search the different journals of the andorran press for articles and comments."
+    "## The training data"
    ]
   },
   {
