chaning to not consider comment responses. previous commit had code to compute comment chains. will leave for potential improvement

--- a/fine-tuning-model/1-choosing-the-model.ipynb
+++ b/fine-tuning-model/1-choosing-the-model.ipynb
@@ -115,19 +115,7 @@
     "- Positive\n",
     "- Neutral\n",
     "- Negative\n",
-    "- Very Negative\n",
-    "\n",
-    "Now, some comments are in response to other comments. This means we could have cases where the individual text of the comment feels positive and in agreement, but if we consider it may be agreeing with a negative comment, we realize the overal feeling towards the article is negative. That is why we need to separate our labels in two: feeling towards the article or feeling towards expressed through feeling towards another comment.\n",
-    "For the labels pertaining to responses, we'll keep the sentiments simpler as to not make our list too long.\n",
-    "\n",
-    "- Positive\n",
-    "- Neutral\n",
-    "- Negative\n",
-    "- Very Negative\n",
-    "- Agrees with Positive: Positive\n",
-    "- Disagrees with Positive: Negative\n",
-    "- Agrees with Negative: Negative\n",
-    "- Disagrees with Negative: Positive\n"
+    "- Very Negative\n"
    ]
   },
   {
