fine-tuning the model NOT EVERYTHING WAS ADDED, THE SAVED MODELS WERE NOT ABLE TO GIT ADD

--- a/fine-tuning-model/1-choosing-the-model.ipynb
+++ b/fine-tuning-model/1-choosing-the-model.ipynb
@@ -109,36 +109,81 @@
     "- Positive\n",
     "- Neutral\n",
     "- Negative\n",
-    "\n",
-    "But we also want to express nuances when it comes to negative responses, seeing as we're interested to see what the citizens feel toward a certain topic, and the level of discontent/disagreement there is. This level of nuance could be better handled with multiple labeling, to include emotion based levels. For this phase of the project, we'll stay with these four main sentiments. For now, to have another level of discontent, we'll change our labels to:\n",
-    "\n",
-    "- Positive\n",
-    "- Neutral\n",
-    "- Negative\n",
-    "- Very Negative\n"
+    "- Very Negative"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "source": [
+    "## Importing necessary libraries"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/anaconda3/envs/andorra-sentiment-analyst/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datasets import Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import BertTokenizer, BertForSequenceClassification, Trainer, TrainingArguments\n",
+    "import torch"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "andorra-sentiment-analyst",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
